test/neg/bug140.scala
class Foo {
  def foo: Int = 0
}
object bar: Foo {
  bar.foo;
  def main(args: Array[String]): Unit = ();
}
